[project]
name = "controllable"
version = "0.1.0"
description = "Control your computer using your hands."
authors = [
    { name = "simon0302010", email = "simon0302010@gmail.com" }
]
requires-python = ">=3.9, <=3.12"
dependencies = [
    "PyQt5",
    "mediapipe>=0.10.5",
    "screeninfo",
    "pyautogui",
    "loess",
    "Pillow",
    "pynput",
    "requests",
    "tqdm",
]
[project.scripts]
controllable = "controllable.app:main"

[tool.uv.blocklist]
packages = ["opencv-python", "opencv-contrib-python"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
