[project]
name = "controllable-py"
version = "0.1.2"
description = "Control your computer using your hands."
readme = "README.md"
license = { text = "GPLv3" }
authors = [
    { name = "simon0302010", email = "simon0302010@gmail.com" }
]
requires-python = ">=3.9, <3.13"
dependencies = [
    "PyQt5",
    "mediapipe>=0.10.5",
    "screeninfo",
    "pyautogui",
    "loess",
    "Pillow",
    "pynput",
    "requests",
    "tqdm",
]

[project.scripts]
controllable = "controllable.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
